# vec2poly

./: .gitignore  CMakeLists.txt  README.md  TODO  except.cpp  except.h  graph-path.cpp  graph-path.h  iobase.cpp  iobase.h  lineseg.cpp  lineseg.h  main.cpp  perf.cpp  perf.h  pntalloc.cpp  pntalloc.h  point.cpp  point.h  polygon.cpp  polygon.h  tests.cpp  toplevel.cpp  toplevel.h  world.cpp  world.h
docs/: interior1.fig  interiorpoint.fig  perf.fig  test-expl.fig  test.fig
